@@ -552,6 +552,7 @@
         [/menu]
 
         [menu]
+	       id=settings-menu
             title=_"Settings"
             image=lite
             items=changelanguage,preferences,editautoupdate
@@ -668,13 +669,40 @@
             yanchor=fixed
         [/panel]
 
+	    [panel]
+            id=villages-panel
+		  ref=settings-menu
+            image=misc/status-bg.png
+            rect="+5,=,+71,="
+            xanchor=proportional
+            yanchor=fixed
+        [/panel]
+
         [mini_map]
             rect=892,32,1017,175
             xanchor=right
             yanchor=fixed
         [/mini_map]
 
+        [label]
+            id=villages-icon
+            icon=misc/villages.png
+            text= _ "villages"
+            ref=villages-panel
+            rect="=+5,=+1,+17,+17"
+            xanchor=proportional
+            yanchor=fixed
+        [/label]
+
         [status]
+            [villages]
+                ref=villages-icon
+                rect="+4,=,+55,+16"
+                font_size=12
+                xanchor=proportional
+                yanchor=fixed	  
+            [/villages]
+
             [terrain]
                 font_size=12
                 rect=820,4,920,20
