@@ -46,6 +46,8 @@ Version 1.3.11+svn:
      checkout for example)
    * fixed some more possible utf-8 related terminations	 
    * fixed WML added anims being forgotten on save/load
+ * map editor and terrains:
+   * added village count to editor
 
 Version 1.3.11:
  * campaigns
